# lithos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO.md  README.md  SHOWBOAT.md  pyproject.toml
.github/workflows/: ci.yml
.ralph/: ralph++.yaml
docker/: Dockerfile  docker-compose.yml
docs/: SPECIFICATION.md  cli.md  mcp-roadmap-alignment.md
docs/plans/: bulk-write-v3.md  cli-extension-plan.md  digest-auto-link-v2.md  event-bus-plan.md  event-delivery-plan.md  final-architecture-guardrails.md  future-improvements.md  implementation-checklist.md  lcma-checklist.md  lcma-design.md  reconcile-plan.md  source_url-dedup.md  target-search-schema.md  unified-write-contract.md
docs/plans/archive/: event-bus-plan.md  event-sse-plan.md  otel-plan.md  reconcile-plan.md  research-cache-plan.md  source_url-dedup.md
scripts/: bump_version.sh  follow-logs.sh  run_silent.sh
src/lithos/: cli.py  config.py  coordination.py  errors.py  events.py  graph.py  knowledge.py  logging_config.py  reconcile.py  search.py  server.py  telemetry.py
src/lithos/lcma/: __init__.py  edges.py  enrich.py  migrations.py  reinforcement.py  retrieve.py  scouts.py  stats.py  utils.py
tasks/: prd.json  progress.txt
tests/: conftest.py  test_async_search.py  test_audit_log.py  test_cli.py  test_cli_contract.py  test_config.py  test_conflict_resolve.py  test_coordination.py  test_edges.py  test_embedding_async.py  test_enrich_worker.py  test_event_bus.py  test_event_delivery.py  test_event_emission.py  test_file_watcher_events.py  test_freshness_conformance.py  test_graph.py  test_integration_conformance.py  test_knowledge.py  test_lcma_config.py  test_lcma_retrieve_integration.py  test_lcma_utils.py  test_logging_config.py  test_migrations.py  test_node_stats_tool.py  test_provenance_conformance.py  test_reconcile.py  test_reinforcement.py  test_retrieve.py  test_scouts.py  test_search.py  test_server.py  test_smoke.py  test_stats.py  test_task_complete_feedback.py  test_telemetry.py
