[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lithos-mcp"
version = "0.1.4"
description = "Shared cognitive substrate for AI agents (local-first, Markdown-native, MCP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dave Snowdon" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "tantivy>=0.22.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.17.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
otel = [
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[project.scripts]
lithos = "lithos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lithos"]

[tool.hatch.envs.default]
installer = "uv"
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v --tb=short"
typecheck = "pyright src/"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lithos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# asyncio_mode = "auto" means pytest-asyncio decorates every async test
# function automatically — @pytest.mark.asyncio decorators are not required.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring integration environment or broader subsystem coverage",
]
